inventory box overflow fix

--- a/src/styles/MainInterface.css
+++ b/src/styles/MainInterface.css
@@ -71,8 +71,7 @@
 .inventory-items, .achievements-items {
   flex: 1;
   overflow-y: auto;
-  padding: 10px;
-  height: 170px; /* Fixed height for content */
+  padding: 5px;
 }
 
 .inventory-empty, .achievements-empty {
@@ -85,7 +84,7 @@
 .inventory-item {
   background-color: rgba(0, 0, 0, 0.2);
   border-radius: var(--border-radius);
-  margin-bottom: 10px;
+  margin-bottom: 6px;
   overflow: hidden;
 }
 
